[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/demonMissile.png" type="Texture" id=1]
[ext_resource path="res://Scripts/HomingMissileScript.gd" type="Script" id=2]
[ext_resource path="res://SoundEffects/missileExplosion.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.70575
height = 21.8052

[node name="Node2D" type="Node2D"]
position = Vector2( 6.29323, 14.7908 )

[node name="Area2D" type="Area2D" parent="." groups=[
"homingMissiles",
]]
position = Vector2( -25.088, -29.1252 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
position = Vector2( 18.995, 19.8209 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 20.4564, 13.3955 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Area2D"]
position = Vector2( 20.1637, 13.5239 )
scale = Vector2( 1.31941, 0.456132 )

[node name="missileSound" type="AudioStreamPlayer" parent="Area2D"]
stream = ExtResource( 3 )
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Missile_area_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
